<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:padding="24dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        tools:context=".activities.LaunchActivity">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/txtAppName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16sp"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textColor="@color/colorMediumBlack"
            android:text="@string/manga_reader" />

        <Button
            android:id="@+id/btnStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/primary_button_rounded_outline"
            android:layout_marginTop="32dp"
            style="?android:attr/borderlessButtonStyle"
            android:text="@string/let_s_start"
            android:textColor="@color/primary_button_rounded_outline" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_gravity="bottom"
        android:textAlignment="center"
        android:textSize="14sp"
        android:text="@string/copyright" />

</FrameLayout>